--- a/theme/assets/theme.css
+++ b/theme/assets/theme.css
@@ -10,6 +10,12 @@ user-select: none;
 -webkit-user-drag: none;
 -webkit-user-select: none;
 -ms-user-select: none;
+  
+-webkit-user-drag: none;
+-khtml-user-drag: none;
+-moz-user-drag: none;
+-o-user-drag: none;
+user-drag: none;
 }
 
 
