--- a/docs/docs/stylesheets/al_extra.css
+++ b/docs/docs/stylesheets/al_extra.css
@@ -1,3 +1,12 @@
+
+/* Al hack to add border shadows to certain screen shots and gifs */
+img[alt="brd"] {
+  border: 1px solid;
+  padding: 10px;
+  box-shadow: 1px 1px #888888;
+  border-radius: 2px;
+}
+
 .button {
   display: block;
   width: 100%;
